[gd_scene load_steps=5 format=3 uid="uid://34txqsc3xx6b"]

[ext_resource type="Texture2D" uid="uid://b0hnu14tf1y4q" path="res://Assets/yosh.png" id="1_61xhj"]
[ext_resource type="Shader" path="res://Scenes/shaders/DancingSprite.gdshader" id="1_durw4"]
[ext_resource type="Script" path="res://Scenes/Scripts/DancingController.gd" id="3_6iej7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_stns6"]
shader = ExtResource("1_durw4")
shader_parameter/speed = 1.0
shader_parameter/amplitude = Vector2(10, 5)

[node name="Node2D" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_stns6")
position = Vector2(760, 320)
scale = Vector2(15.77, 15.77)
texture = ExtResource("1_61xhj")

[node name="DancingController" type="HBoxContainer" parent="."]
offset_right = 87.0
offset_bottom = 632.0
script = ExtResource("3_6iej7")

[node name="VBoxContainer" type="VBoxContainer" parent="DancingController"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label" type="Label" parent="DancingController/VBoxContainer"]
layout_mode = 2
text = "X"
horizontal_alignment = 1

[node name="XLabel" type="Label" parent="DancingController/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="XSlider" type="VSlider" parent="DancingController/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 15.0
step = 0.5
value = 10.0

[node name="VBoxContainer2" type="VBoxContainer" parent="DancingController"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label" type="Label" parent="DancingController/VBoxContainer2"]
layout_mode = 2
text = "Y"
horizontal_alignment = 1

[node name="YLabel" type="Label" parent="DancingController/VBoxContainer2"]
layout_mode = 2
horizontal_alignment = 1

[node name="YSlider" type="VSlider" parent="DancingController/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 15.0
step = 0.5
value = 5.0

[node name="VBoxContainer3" type="VBoxContainer" parent="DancingController"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Label" type="Label" parent="DancingController/VBoxContainer3"]
layout_mode = 2
text = "speed"
horizontal_alignment = 1

[node name="SpeedLabel" type="Label" parent="DancingController/VBoxContainer3"]
layout_mode = 2
horizontal_alignment = 1

[node name="SpeedSlider" type="VSlider" parent="DancingController/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 3
max_value = 3.0
step = 0.05
value = 1.0

[connection signal="value_changed" from="DancingController/VBoxContainer/XSlider" to="DancingController" method="_on_x_slider_value_changed"]
[connection signal="value_changed" from="DancingController/VBoxContainer2/YSlider" to="DancingController" method="_on_y_slider_value_changed"]
[connection signal="value_changed" from="DancingController/VBoxContainer3/SpeedSlider" to="DancingController" method="_on_speed_slider_value_changed"]
